--- a/blog/package.json
+++ b/blog/package.json
@@ -9,6 +9,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.22",
